# zcash-minimal

./: LICENSE  README.md
src/: CMakeLists.txt  hash.h
src/3rd/: CMakeLists.txt  Makefile
src/crypto/: common.h
src/support/: cleanse.cpp
src/utils/: serialize.h
src/zcash/: Address.cpp  CMakeLists.txt  CreateJoinSplit.cpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  JoinSplit.hpp  Note.cpp  Note.hpp  NoteEncryption.cpp  NoteEncryption.hpp  Proof.cpp  ShieldTransaction.cpp  ShieldTransaction.h  random.h
src/zcash/circuit/: gadget.tcc  utils.tcc
