
set(APP_ZCASH_MINIMAL zcash-minimal)
set(CMAKE_CXX_STANDARD 11)

aux_source_directory(${ZCASH_MINIMAL_SOURCE}/zcash APP_SRC)
list(REMOVE_ITEM APP_SRC ${ZCASH_MINIMAL_SOURCE}/zcash/CreateJoinSplit.cpp)

# aux_source_directory(${ZCASH_MINIMAL_SOURCE}/zcash/circuit APP_SRC)

set(APP_ZCASH_MINIMAL_SRC ${APP_SRC} ${ZCASH_MINIMAL_DEPEND_SRC})

MESSAGE(STATUS "APP_SRC:" ${APP_SRC})
MESSAGE(STATUS "APP_ZCASH_MINIMAL_SRC:" ${APP_ZCASH_MINIMAL_SRC})

add_executable(${APP_ZCASH_MINIMAL} ${APP_ZCASH_MINIMAL_SRC})

target_link_libraries(${APP_ZCASH_MINIMAL} ${ZCASH_DEPEND_LIBS})
